:tada: Skips bootstrap

--- a/pages/doing.html
+++ b/pages/doing.html
@@ -2,20 +2,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-    <title>Homepage</title>
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+    <title>Doing</title>
     <script src="main.js"></script>
 </head>
   <body>
     <div class="topnav">
-      <a href="index.html">Home</a>
-      <a href="pages/doing.html">Doing</a>
-      <a href="pages/done.html">Done</a>
+      <a href="../index.html">Home</a>
+      <a href="doing.html">Doing</a>
+      <a href="done.html">Done</a>
     </div>
 
     <div class="content">
-      <h2>Home</h2>
-      <p>TODO:</p>
+      <h2>Doing:</h2>
+      <p>Doing atm</p>
     </div>
 
     <div class="footer">
