--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
     <div class="content">
       <h2>Home</h2>
       <p>TODO:</p>
+      <li class="done">Learn git/github</li>
+      <li>Make a website</li>
+      <li>Setup plan</li>
+    </div>
+
+    <div class="content">
+      <h2>Done:</h2>
     </div>
 
     <div class="footer">
