--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <title>Homepage</title>
     <script src="main.js"></script>
 </head>
@@ -11,13 +12,14 @@
       <a href="index.html">Home</a>
       <a href="pages/doing.html">Doing</a>
       <a href="pages/done.html">Done</a>
+      <a class="login" href="#">Log in</a>
     </div>
 
     <div class="content">
       <h2>Home</h2>
       <p>TODO:</p>
       <li class="done">Learn git/github</li>
-      <li>Make a website</li>
+      <li class="done">Make a website</li>
       <li>Setup plan</li>
     </div>
 
