--- a/pages/doing.html
+++ b/pages/doing.html
@@ -1,11 +1,12 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="../stylesheet.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="../stylesheet.css" />
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" />
     <title>Doing</title>
     <script src="main.js"></script>
-</head>
+  </head>
   <body>
     <div class="topnav">
       <a href="../index.html">Home</a>
@@ -15,12 +16,21 @@
 
     <div class="content">
       <h2>Doing:</h2>
-      <p>Doing atm</p>
+      <p>Doing atm:</p>
+      <div>
+        <a class="doing" href="rpg.html">Text Based RPG</a>
+        <h6>Progress</h6>
+        <div class="w3-grey">
+          <div class="w3-container w3-green w3-center" style="width: 2%;">
+            2%
+          </div>
+        </div>
+        <p>More</p>
+      </div>
     </div>
 
-    <div class="footer">
+    <footer class="w3-container w3-display-bottommiddle">
       <p>stuff 2020</p>
-    </div>
-
+    </footer>
   </body>
 </html>
