--- a/pages/doing.html
+++ b/pages/doing.html
@@ -17,15 +17,17 @@
     <div class="content">
       <h2>Doing:</h2>
       <p>Doing atm:</p>
-      <div>
-        <a class="doing" href="rpg.html">Text Based RPG</a>
-        <h6>Progress</h6>
-        <div class="w3-grey">
-          <div class="w3-container w3-green w3-center" style="width: 2%;">
-            2%
-          </div>
+   
+      <div class="w3-container w3-padding w3-light-grey">
+        <li class="w3-ul">
+      <a class="doing" href="rpg.html">Text Based RPG</a>
+      <div class="w3-grey w3-round">
+        <div class="w3 container w3-green w3-round" style="width: 2%;">
+          2%
         </div>
-        <p>More</p>
+        </div>
+      </div>
+    </li>
       </div>
     </div>
 
