--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <a href="index.html">Home</a>
       <a href="pages/doing.html">Doing</a>
       <a href="pages/done.html">Done</a>
-      <a class="login" href="#">Log in</a>
+      <a class="right" href="#">Log in</a>
     </div>
 
     <div class="content">
